--- a/Heapsort.ipynb
+++ b/Heapsort.ipynb
@@ -635,7 +635,7 @@
     {
      "data": {
       "text/plain": [
-       "[1, 3, 6, 4, 9, 8, 7, 5, 10, 2]"
+       "[1, 8, 3, 9, 6, 4, 10, 2, 7, 5]"
       ]
      },
      "execution_count": 32,
@@ -708,7 +708,7 @@
     {
      "data": {
       "text/plain": [
-       "81"
+       "63"
       ]
      },
      "execution_count": 35,
@@ -763,7 +763,7 @@
     {
      "data": {
       "text/plain": [
-       "[4, 10, 6, 7, 5, 3, 9, 2, 8, 1]"
+       "[1, 8, 7, 6, 10, 5, 3, 2, 9, 4]"
       ]
      },
      "execution_count": 37,
@@ -790,7 +790,7 @@
     {
      "data": {
       "text/plain": [
-       "45"
+       "42"
       ]
      },
      "execution_count": 38,
@@ -892,9 +892,421 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1c390632",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "## Heap Sort"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63cf2950",
+   "metadata": {},
+   "source": [
+    "#### Transpalted from wiki\n",
+    "\n",
+    "\n",
+    "https://en.wikipedia.org/wiki/Heapsort\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a16e40ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def heapify(a,count):\n",
+    "    start = (count - 2)  //2 #   iParent(count-1) // divides by 2 but if num comes out 1.5 // floors it to 1.5\n",
+    "    \n",
+    "    while start >= 0:\n",
+    "        siftDown(a,start,count-1)\n",
+    "        start = start -1\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1d9bc835",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def siftDown(a,start,end):\n",
+    "    root =start\n",
+    "    \n",
+    "    while (2 * root +1)<= end:\n",
+    "        child = (2 * root + 1)\n",
+    "        swap = root\n",
+    "        \n",
+    "        if a[swap] < a[child]:\n",
+    "            swap =child\n",
+    "        if child + 1 <= end and a[swap] < a[child+1]:\n",
+    "            swap = child+1\n",
+    "        if swap == root:\n",
+    "            return\n",
+    "        else:\n",
+    "            a[root], a[swap] = a[swap], a[root]\n",
+    "            root = swap"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "cfed5853",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def heapsort(a):\n",
+    "    \"\"\"Sorts the unordered array a of length count.\"\"\"\n",
+    "    count = len(a) # length of the array a\n",
+    "    \n",
+    "    \n",
+    "    heapify(a,count)\n",
+    "    end = count-1\n",
+    "    \n",
+    "    while end > 0:\n",
+    "        a[0], a[end] = a[end], a[0]\n",
+    "        end = end -1\n",
+    "        siftDown(a,0,end)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "b714a9f0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 1, 3, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "List = [5,1,3,7,8,9]\n",
+    "List\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "85ed3866",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 3, 5, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heapsort(List)\n",
+    "List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "cf340f29",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0, 1, 2, 3, 4) -> [0, 1, 2, 3, 4]\n",
+      "(0, 1, 2, 4, 3) -> [0, 1, 2, 3, 4]\n",
+      "(0, 1, 3, 2, 4) -> [0, 1, 2, 3, 4]\n",
+      "(0, 1, 3, 4, 2) -> [0, 1, 2, 3, 4]\n",
+      "(0, 1, 4, 2, 3) -> [0, 1, 2, 3, 4]\n",
+      "(0, 1, 4, 3, 2) -> [0, 1, 2, 3, 4]\n",
+      "(0, 2, 1, 3, 4) -> [0, 1, 2, 3, 4]\n",
+      "(0, 2, 1, 4, 3) -> [0, 1, 2, 3, 4]\n",
+      "(0, 2, 3, 1, 4) -> [0, 1, 2, 3, 4]\n",
+      "(0, 2, 3, 4, 1) -> [0, 1, 2, 3, 4]\n",
+      "(0, 2, 4, 1, 3) -> [0, 1, 2, 3, 4]\n",
+      "(0, 2, 4, 3, 1) -> [0, 1, 2, 3, 4]\n",
+      "(0, 3, 1, 2, 4) -> [0, 1, 2, 3, 4]\n",
+      "(0, 3, 1, 4, 2) -> [0, 1, 2, 3, 4]\n",
+      "(0, 3, 2, 1, 4) -> [0, 1, 2, 3, 4]\n",
+      "(0, 3, 2, 4, 1) -> [0, 1, 2, 3, 4]\n",
+      "(0, 3, 4, 1, 2) -> [0, 1, 2, 3, 4]\n",
+      "(0, 3, 4, 2, 1) -> [0, 1, 2, 3, 4]\n",
+      "(0, 4, 1, 2, 3) -> [0, 1, 2, 3, 4]\n",
+      "(0, 4, 1, 3, 2) -> [0, 1, 2, 3, 4]\n",
+      "(0, 4, 2, 1, 3) -> [0, 1, 2, 3, 4]\n",
+      "(0, 4, 2, 3, 1) -> [0, 1, 2, 3, 4]\n",
+      "(0, 4, 3, 1, 2) -> [0, 1, 2, 3, 4]\n",
+      "(0, 4, 3, 2, 1) -> [0, 1, 2, 3, 4]\n",
+      "(1, 0, 2, 3, 4) -> [0, 1, 2, 3, 4]\n",
+      "(1, 0, 2, 4, 3) -> [0, 1, 2, 3, 4]\n",
+      "(1, 0, 3, 2, 4) -> [0, 1, 2, 3, 4]\n",
+      "(1, 0, 3, 4, 2) -> [0, 1, 2, 3, 4]\n",
+      "(1, 0, 4, 2, 3) -> [0, 1, 2, 3, 4]\n",
+      "(1, 0, 4, 3, 2) -> [0, 1, 2, 3, 4]\n",
+      "(1, 2, 0, 3, 4) -> [0, 1, 2, 3, 4]\n",
+      "(1, 2, 0, 4, 3) -> [0, 1, 2, 3, 4]\n",
+      "(1, 2, 3, 0, 4) -> [0, 1, 2, 3, 4]\n",
+      "(1, 2, 3, 4, 0) -> [0, 1, 2, 3, 4]\n",
+      "(1, 2, 4, 0, 3) -> [0, 1, 2, 3, 4]\n",
+      "(1, 2, 4, 3, 0) -> [0, 1, 2, 3, 4]\n",
+      "(1, 3, 0, 2, 4) -> [0, 1, 2, 3, 4]\n",
+      "(1, 3, 0, 4, 2) -> [0, 1, 2, 3, 4]\n",
+      "(1, 3, 2, 0, 4) -> [0, 1, 2, 3, 4]\n",
+      "(1, 3, 2, 4, 0) -> [0, 1, 2, 3, 4]\n",
+      "(1, 3, 4, 0, 2) -> [0, 1, 2, 3, 4]\n",
+      "(1, 3, 4, 2, 0) -> [0, 1, 2, 3, 4]\n",
+      "(1, 4, 0, 2, 3) -> [0, 1, 2, 3, 4]\n",
+      "(1, 4, 0, 3, 2) -> [0, 1, 2, 3, 4]\n",
+      "(1, 4, 2, 0, 3) -> [0, 1, 2, 3, 4]\n",
+      "(1, 4, 2, 3, 0) -> [0, 1, 2, 3, 4]\n",
+      "(1, 4, 3, 0, 2) -> [0, 1, 2, 3, 4]\n",
+      "(1, 4, 3, 2, 0) -> [0, 1, 2, 3, 4]\n",
+      "(2, 0, 1, 3, 4) -> [0, 1, 2, 3, 4]\n",
+      "(2, 0, 1, 4, 3) -> [0, 1, 2, 3, 4]\n",
+      "(2, 0, 3, 1, 4) -> [0, 1, 2, 3, 4]\n",
+      "(2, 0, 3, 4, 1) -> [0, 1, 2, 3, 4]\n",
+      "(2, 0, 4, 1, 3) -> [0, 1, 2, 3, 4]\n",
+      "(2, 0, 4, 3, 1) -> [0, 1, 2, 3, 4]\n",
+      "(2, 1, 0, 3, 4) -> [0, 1, 2, 3, 4]\n",
+      "(2, 1, 0, 4, 3) -> [0, 1, 2, 3, 4]\n",
+      "(2, 1, 3, 0, 4) -> [0, 1, 2, 3, 4]\n",
+      "(2, 1, 3, 4, 0) -> [0, 1, 2, 3, 4]\n",
+      "(2, 1, 4, 0, 3) -> [0, 1, 2, 3, 4]\n",
+      "(2, 1, 4, 3, 0) -> [0, 1, 2, 3, 4]\n",
+      "(2, 3, 0, 1, 4) -> [0, 1, 2, 3, 4]\n",
+      "(2, 3, 0, 4, 1) -> [0, 1, 2, 3, 4]\n",
+      "(2, 3, 1, 0, 4) -> [0, 1, 2, 3, 4]\n",
+      "(2, 3, 1, 4, 0) -> [0, 1, 2, 3, 4]\n",
+      "(2, 3, 4, 0, 1) -> [0, 1, 2, 3, 4]\n",
+      "(2, 3, 4, 1, 0) -> [0, 1, 2, 3, 4]\n",
+      "(2, 4, 0, 1, 3) -> [0, 1, 2, 3, 4]\n",
+      "(2, 4, 0, 3, 1) -> [0, 1, 2, 3, 4]\n",
+      "(2, 4, 1, 0, 3) -> [0, 1, 2, 3, 4]\n",
+      "(2, 4, 1, 3, 0) -> [0, 1, 2, 3, 4]\n",
+      "(2, 4, 3, 0, 1) -> [0, 1, 2, 3, 4]\n",
+      "(2, 4, 3, 1, 0) -> [0, 1, 2, 3, 4]\n",
+      "(3, 0, 1, 2, 4) -> [0, 1, 2, 3, 4]\n",
+      "(3, 0, 1, 4, 2) -> [0, 1, 2, 3, 4]\n",
+      "(3, 0, 2, 1, 4) -> [0, 1, 2, 3, 4]\n",
+      "(3, 0, 2, 4, 1) -> [0, 1, 2, 3, 4]\n",
+      "(3, 0, 4, 1, 2) -> [0, 1, 2, 3, 4]\n",
+      "(3, 0, 4, 2, 1) -> [0, 1, 2, 3, 4]\n",
+      "(3, 1, 0, 2, 4) -> [0, 1, 2, 3, 4]\n",
+      "(3, 1, 0, 4, 2) -> [0, 1, 2, 3, 4]\n",
+      "(3, 1, 2, 0, 4) -> [0, 1, 2, 3, 4]\n",
+      "(3, 1, 2, 4, 0) -> [0, 1, 2, 3, 4]\n",
+      "(3, 1, 4, 0, 2) -> [0, 1, 2, 3, 4]\n",
+      "(3, 1, 4, 2, 0) -> [0, 1, 2, 3, 4]\n",
+      "(3, 2, 0, 1, 4) -> [0, 1, 2, 3, 4]\n",
+      "(3, 2, 0, 4, 1) -> [0, 1, 2, 3, 4]\n",
+      "(3, 2, 1, 0, 4) -> [0, 1, 2, 3, 4]\n",
+      "(3, 2, 1, 4, 0) -> [0, 1, 2, 3, 4]\n",
+      "(3, 2, 4, 0, 1) -> [0, 1, 2, 3, 4]\n",
+      "(3, 2, 4, 1, 0) -> [0, 1, 2, 3, 4]\n",
+      "(3, 4, 0, 1, 2) -> [0, 1, 2, 3, 4]\n",
+      "(3, 4, 0, 2, 1) -> [0, 1, 2, 3, 4]\n",
+      "(3, 4, 1, 0, 2) -> [0, 1, 2, 3, 4]\n",
+      "(3, 4, 1, 2, 0) -> [0, 1, 2, 3, 4]\n",
+      "(3, 4, 2, 0, 1) -> [0, 1, 2, 3, 4]\n",
+      "(3, 4, 2, 1, 0) -> [0, 1, 2, 3, 4]\n",
+      "(4, 0, 1, 2, 3) -> [0, 1, 2, 3, 4]\n",
+      "(4, 0, 1, 3, 2) -> [0, 1, 2, 3, 4]\n",
+      "(4, 0, 2, 1, 3) -> [0, 1, 2, 3, 4]\n",
+      "(4, 0, 2, 3, 1) -> [0, 1, 2, 3, 4]\n",
+      "(4, 0, 3, 1, 2) -> [0, 1, 2, 3, 4]\n",
+      "(4, 0, 3, 2, 1) -> [0, 1, 2, 3, 4]\n",
+      "(4, 1, 0, 2, 3) -> [0, 1, 2, 3, 4]\n",
+      "(4, 1, 0, 3, 2) -> [0, 1, 2, 3, 4]\n",
+      "(4, 1, 2, 0, 3) -> [0, 1, 2, 3, 4]\n",
+      "(4, 1, 2, 3, 0) -> [0, 1, 2, 3, 4]\n",
+      "(4, 1, 3, 0, 2) -> [0, 1, 2, 3, 4]\n",
+      "(4, 1, 3, 2, 0) -> [0, 1, 2, 3, 4]\n",
+      "(4, 2, 0, 1, 3) -> [0, 1, 2, 3, 4]\n",
+      "(4, 2, 0, 3, 1) -> [0, 1, 2, 3, 4]\n",
+      "(4, 2, 1, 0, 3) -> [0, 1, 2, 3, 4]\n",
+      "(4, 2, 1, 3, 0) -> [0, 1, 2, 3, 4]\n",
+      "(4, 2, 3, 0, 1) -> [0, 1, 2, 3, 4]\n",
+      "(4, 2, 3, 1, 0) -> [0, 1, 2, 3, 4]\n",
+      "(4, 3, 0, 1, 2) -> [0, 1, 2, 3, 4]\n",
+      "(4, 3, 0, 2, 1) -> [0, 1, 2, 3, 4]\n",
+      "(4, 3, 1, 0, 2) -> [0, 1, 2, 3, 4]\n",
+      "(4, 3, 1, 2, 0) -> [0, 1, 2, 3, 4]\n",
+      "(4, 3, 2, 0, 1) -> [0, 1, 2, 3, 4]\n",
+      "(4, 3, 2, 1, 0) -> [0, 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import itertools\n",
+    "# premutation means gives any order the number can be in a list order, this a list of 0-4\n",
+    "for perm in itertools.permutations(range(5)):\n",
+    "    List = list(perm)\n",
+    "    heapsort(List)\n",
+    "    print(f'{perm} -> {List}')\n",
+    "    \n",
+    "    # sorts every possible premutatioon of the list into order\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d50153c7",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "## Teachers version of heap sort "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "bb8af581",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def siftDown(L, parent, end):\n",
+    "    \"\"\"L[parent:end+1] should almost be a max heap.\n",
+    "       siftDown repairs it so that it is one.\"\"\"\n",
+    "    \n",
+    "    # Keep track of the number of comparisons.\n",
+    "    no_comparisons = 0\n",
+    "    \n",
+    "    # While parent is actually a parent (has at least a left child).\n",
+    "    while 2*parent + 1 <= end:\n",
+    "        # The indices of the children of parent.\n",
+    "        lchild = 2 * parent + 1\n",
+    "        rchild = 2 * parent + 2\n",
+    "        \n",
+    "        # Assume the parent is larger than the children.\n",
+    "        swap = parent\n",
+    "        # Is the parent smaller than the left child?\n",
+    "        if L[swap] < L[lchild]:\n",
+    "            # Then swap is set to index of left child.\n",
+    "            swap = lchild\n",
+    "            # Increment no_comparisons.\n",
+    "            no_comparisons = no_comparisons + 1\n",
+    "        # Check if right child exists and is smaller than L[swap].\n",
+    "        if rchild <= end and L[swap] < L[rchild]:\n",
+    "            # Then swap is set to index of right child.\n",
+    "            swap = rchild\n",
+    "            # Increment no_comparisons.\n",
+    "            no_comparisons = no_comparisons + 1\n",
+    "        # We have a max heap if the parent is bigger than the children.\n",
+    "        if swap == parent:\n",
+    "            break \n",
+    "        else:\n",
+    "            # Swap the parent with the bigger child.\n",
+    "            L[parent], L[swap] = L[swap], L[parent]\n",
+    "            # Set parent to bigger child's index.\n",
+    "            parent = swap\n",
+    "    \n",
+    "    # Return the number of comparisons.\n",
+    "    return no_comparisons\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "ad97d051",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def heapsort(L):\n",
+    "    \"\"\"Sorts the list L in-place using Heap Sort.\"\"\"\n",
+    "    \n",
+    "    # Keep track of the number of comparisons.\n",
+    "    no_comparisons = 0\n",
+    "    \n",
+    "    # Turn L into a max heap.\n",
+    "    # Index of the last element.\n",
+    "    last_element = len(L) - 1\n",
+    "    # Find the last parent. by using this math which finds the parent of the last child\n",
+    "    last_parent = (last_element - 1) // 2\n",
+    "    # Loop backwards through all parents.\n",
+    "    for parent in range(last_parent, -1, -1):\n",
+    "        # Sift down.\n",
+    "        no_comparisons = no_comparisons + siftDown(L, parent, last_element)\n",
+    "\n",
+    "    # Segregate the list L into two parts:\n",
+    "    #   1. L[:end] is a max heap\n",
+    "    #   2. Each element beyond end is greater than everything before it.\n",
+    "    # While there are still elements in the heap.\n",
+    "    for end in range(last_element, 0, -1):\n",
+    "        # Swap the element at index 0 with the element at index end.\n",
+    "        L[0], L[end] = L[end], L[0]\n",
+    "        # Fix the heap - the root is currently out of place.\n",
+    "        no_comparisons = no_comparisons + siftDown(L, 0, end - 1)\n",
+    "    \n",
+    "    # Return the number of comparisons.\n",
+    "    return no_comparisons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "6beedd31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[19, 100, 36, 25, 3, 17, 7, 1, 2]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# The example list from the diagram above.\n",
+    "L = [19, 100, 36, 25, 3, 17, 7, 1, 2]\n",
+    "L\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "7909988a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 7, 17, 19, 25, 36, 100]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Show heap sort working.\n",
+    "heapsort(L)\n",
+    "L"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a458244",
+   "id": "e69d020a",
    "metadata": {},
    "outputs": [],
    "source": []
