--- a/Heapsort.ipynb
+++ b/Heapsort.ipynb
@@ -635,7 +635,7 @@
     {
      "data": {
       "text/plain": [
-       "[1, 8, 3, 9, 6, 4, 10, 2, 7, 5]"
+       "[7, 9, 5, 10, 3, 6, 4, 8, 1, 2]"
       ]
      },
      "execution_count": 32,
@@ -708,7 +708,7 @@
     {
      "data": {
       "text/plain": [
-       "63"
+       "81"
       ]
      },
      "execution_count": 35,
@@ -763,7 +763,7 @@
     {
      "data": {
       "text/plain": [
-       "[1, 8, 7, 6, 10, 5, 3, 2, 9, 4]"
+       "[10, 1, 5, 2, 9, 8, 3, 7, 6, 4]"
       ]
      },
      "execution_count": 37,
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 44,
    "id": "1d9bc835",
    "metadata": {},
    "outputs": [],
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 45,
    "id": "cfed5853",
    "metadata": {},
    "outputs": [],
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 47,
    "id": "85ed3866",
    "metadata": {},
    "outputs": [
@@ -1008,7 +1008,7 @@
        "[1, 3, 5, 7, 8, 9]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 48,
    "id": "cf340f29",
    "metadata": {},
    "outputs": [
@@ -1164,6 +1164,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "58ffa6f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 100, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Lists are passed by reference they are a pointer to an int number which represents a memory section\n",
+    "\n",
+    "# function:a is a reference\n",
+    "\n",
+    "def change(b):\n",
+    "    #change an element in list\n",
+    "    b[2] =100\n",
+    "    \n",
+    "# list\n",
+    "a = [1,2,3,4]\n",
+    "\n",
+    "# pass a to change and it is a pointer\n",
+    "change(a)\n",
+    "\n",
+    "# a has changed and this works. if it was a simple int it would not\n",
+    "print(a)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "d50153c7",
    "metadata": {},
@@ -1175,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 50,
    "id": "bb8af581",
    "metadata": {},
    "outputs": [],
@@ -1222,7 +1255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 51,
    "id": "ad97d051",
    "metadata": {},
    "outputs": [],
@@ -1230,19 +1263,24 @@
     "def heapsort(L):\n",
     "    \"\"\"Sorts the list L in-place using Heap Sort.\"\"\"\n",
     "    \n",
+    "    #section 1\n",
+    "    \n",
     "    # Keep track of the number of comparisons.\n",
     "    no_comparisons = 0\n",
     "    \n",
-    "    # Turn L into a max heap.\n",
-    "    # Index of the last element.\n",
+    "    # Turn L into a max heap which is when everyparent is bigger than their child thats what this section does\n",
+    "    # Index of the last element. the last child in the graph to find the parent\n",
     "    last_element = len(L) - 1\n",
     "    # Find the last parent. by using this math which finds the parent of the last child\n",
     "    last_parent = (last_element - 1) // 2\n",
-    "    # Loop backwards through all parents.\n",
+    "    # Loop backwards through all parents. -1 goes backwards\n",
     "    for parent in range(last_parent, -1, -1):\n",
     "        # Sift down.\n",
     "        no_comparisons = no_comparisons + siftDown(L, parent, last_element)\n",
     "\n",
+    "    \n",
+    "    #section 2\n",
+    "    \n",
     "    # Segregate the list L into two parts:\n",
     "    #   1. L[:end] is a max heap\n",
     "    #   2. Each element beyond end is greater than everything before it.\n",
@@ -1259,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 52,
    "id": "6beedd31",
    "metadata": {},
    "outputs": [
@@ -1269,7 +1307,7 @@
        "[19, 100, 36, 25, 3, 17, 7, 1, 2]"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 53,
    "id": "7909988a",
    "metadata": {},
    "outputs": [
@@ -1292,7 +1330,7 @@
        "[1, 2, 3, 7, 17, 19, 25, 36, 100]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,9 +1342,454 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "806e7c1b",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "\n",
+    "## Comparing Algorithms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "e69d020a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 2, 3, 7, 17, 19, 25, 36, 100], 12)"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Perform heap sort, show number of comparisons.\n",
+    "L = [19, 100, 36, 25, 3, 17, 7, 1, 2]\n",
+    "no_comparisons = heapsort(L)\n",
+    "L, no_comparisons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "1d93892c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([1, 2, 3, 7, 17, 19, 25, 36, 100], 36)"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Perform bubble sort, show number of comparisons.\n",
+    "L = [19, 100, 36, 25, 3, 17, 7, 1, 2]\n",
+    "no_comparisons = bubble_sort(L)\n",
+    "L, no_comparisons"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "1beb6646",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0, 1, 2, 3, 4| bubSort = 4| HeapSort= 8\n",
+      "0, 1, 2, 4, 3| bubSort = 7| HeapSort= 9\n",
+      "0, 1, 3, 2, 4| bubSort = 7| HeapSort= 7\n",
+      "0, 1, 3, 4, 2| bubSort = 9| HeapSort= 8\n",
+      "0, 1, 4, 2, 3| bubSort = 7| HeapSort= 8\n",
+      "0, 1, 4, 3, 2| bubSort = 9| HeapSort= 6\n",
+      "0, 2, 1, 3, 4| bubSort = 7| HeapSort= 6\n",
+      "0, 2, 1, 4, 3| bubSort = 7| HeapSort= 7\n",
+      "0, 2, 3, 1, 4| bubSort = 9| HeapSort= 8\n",
+      "0, 2, 3, 4, 1| bubSort = 10| HeapSort= 6\n",
+      "0, 2, 4, 1, 3| bubSort = 9| HeapSort= 6\n",
+      "0, 2, 4, 3, 1| bubSort = 10| HeapSort= 7\n",
+      "0, 3, 1, 2, 4| bubSort = 7| HeapSort= 7\n",
+      "0, 3, 1, 4, 2| bubSort = 9| HeapSort= 5\n",
+      "0, 3, 2, 1, 4| bubSort = 9| HeapSort= 9\n",
+      "0, 3, 2, 4, 1| bubSort = 10| HeapSort= 7\n",
+      "0, 3, 4, 1, 2| bubSort = 9| HeapSort= 5\n",
+      "0, 3, 4, 2, 1| bubSort = 10| HeapSort= 6\n",
+      "0, 4, 1, 2, 3| bubSort = 7| HeapSort= 6\n",
+      "0, 4, 1, 3, 2| bubSort = 9| HeapSort= 4\n",
+      "0, 4, 2, 1, 3| bubSort = 9| HeapSort= 8\n",
+      "0, 4, 2, 3, 1| bubSort = 10| HeapSort= 6\n",
+      "0, 4, 3, 1, 2| bubSort = 9| HeapSort= 7\n",
+      "0, 4, 3, 2, 1| bubSort = 10| HeapSort= 5\n",
+      "1, 0, 2, 3, 4| bubSort = 7| HeapSort= 9\n",
+      "1, 0, 2, 4, 3| bubSort = 7| HeapSort= 7\n",
+      "1, 0, 3, 2, 4| bubSort = 7| HeapSort= 8\n",
+      "1, 0, 3, 4, 2| bubSort = 9| HeapSort= 6\n",
+      "1, 0, 4, 2, 3| bubSort = 7| HeapSort= 7\n",
+      "1, 0, 4, 3, 2| bubSort = 9| HeapSort= 5\n",
+      "1, 2, 0, 3, 4| bubSort = 9| HeapSort= 7\n",
+      "1, 2, 0, 4, 3| bubSort = 9| HeapSort= 8\n",
+      "1, 2, 3, 0, 4| bubSort = 10| HeapSort= 6\n",
+      "1, 2, 3, 4, 0| bubSort = 10| HeapSort= 7\n",
+      "1, 2, 4, 0, 3| bubSort = 10| HeapSort= 5\n",
+      "1, 2, 4, 3, 0| bubSort = 10| HeapSort= 6\n",
+      "1, 3, 0, 2, 4| bubSort = 9| HeapSort= 8\n",
+      "1, 3, 0, 4, 2| bubSort = 9| HeapSort= 6\n",
+      "1, 3, 2, 0, 4| bubSort = 10| HeapSort= 7\n",
+      "1, 3, 2, 4, 0| bubSort = 10| HeapSort= 8\n",
+      "1, 3, 4, 0, 2| bubSort = 10| HeapSort= 4\n",
+      "1, 3, 4, 2, 0| bubSort = 10| HeapSort= 5\n",
+      "1, 4, 0, 2, 3| bubSort = 9| HeapSort= 7\n",
+      "1, 4, 0, 3, 2| bubSort = 9| HeapSort= 5\n",
+      "1, 4, 2, 0, 3| bubSort = 10| HeapSort= 6\n",
+      "1, 4, 2, 3, 0| bubSort = 10| HeapSort= 7\n",
+      "1, 4, 3, 0, 2| bubSort = 10| HeapSort= 5\n",
+      "1, 4, 3, 2, 0| bubSort = 10| HeapSort= 6\n",
+      "2, 0, 1, 3, 4| bubSort = 7| HeapSort= 7\n",
+      "2, 0, 1, 4, 3| bubSort = 7| HeapSort= 5\n",
+      "2, 0, 3, 1, 4| bubSort = 9| HeapSort= 7\n",
+      "2, 0, 3, 4, 1| bubSort = 10| HeapSort= 5\n",
+      "2, 0, 4, 1, 3| bubSort = 9| HeapSort= 9\n",
+      "2, 0, 4, 3, 1| bubSort = 10| HeapSort= 7\n",
+      "2, 1, 0, 3, 4| bubSort = 9| HeapSort= 8\n",
+      "2, 1, 0, 4, 3| bubSort = 9| HeapSort= 6\n",
+      "2, 1, 3, 0, 4| bubSort = 10| HeapSort= 5\n",
+      "2, 1, 3, 4, 0| bubSort = 10| HeapSort= 6\n",
+      "2, 1, 4, 0, 3| bubSort = 10| HeapSort= 7\n",
+      "2, 1, 4, 3, 0| bubSort = 10| HeapSort= 8\n",
+      "2, 3, 0, 1, 4| bubSort = 9| HeapSort= 6\n",
+      "2, 3, 0, 4, 1| bubSort = 10| HeapSort= 7\n",
+      "2, 3, 1, 0, 4| bubSort = 10| HeapSort= 5\n",
+      "2, 3, 1, 4, 0| bubSort = 10| HeapSort= 6\n",
+      "2, 3, 4, 0, 1| bubSort = 10| HeapSort= 6\n",
+      "2, 3, 4, 1, 0| bubSort = 10| HeapSort= 7\n",
+      "2, 4, 0, 1, 3| bubSort = 9| HeapSort= 5\n",
+      "2, 4, 0, 3, 1| bubSort = 10| HeapSort= 6\n",
+      "2, 4, 1, 0, 3| bubSort = 10| HeapSort= 4\n",
+      "2, 4, 1, 3, 0| bubSort = 10| HeapSort= 5\n",
+      "2, 4, 3, 0, 1| bubSort = 10| HeapSort= 4\n",
+      "2, 4, 3, 1, 0| bubSort = 10| HeapSort= 5\n",
+      "3, 0, 1, 2, 4| bubSort = 7| HeapSort= 6\n",
+      "3, 0, 1, 4, 2| bubSort = 9| HeapSort= 4\n",
+      "3, 0, 2, 1, 4| bubSort = 9| HeapSort= 8\n",
+      "3, 0, 2, 4, 1| bubSort = 10| HeapSort= 6\n",
+      "3, 0, 4, 1, 2| bubSort = 9| HeapSort= 7\n",
+      "3, 0, 4, 2, 1| bubSort = 10| HeapSort= 5\n",
+      "3, 1, 0, 2, 4| bubSort = 9| HeapSort= 7\n",
+      "3, 1, 0, 4, 2| bubSort = 9| HeapSort= 5\n",
+      "3, 1, 2, 0, 4| bubSort = 10| HeapSort= 6\n",
+      "3, 1, 2, 4, 0| bubSort = 10| HeapSort= 7\n",
+      "3, 1, 4, 0, 2| bubSort = 10| HeapSort= 5\n",
+      "3, 1, 4, 2, 0| bubSort = 10| HeapSort= 6\n",
+      "3, 2, 0, 1, 4| bubSort = 9| HeapSort= 5\n",
+      "3, 2, 0, 4, 1| bubSort = 10| HeapSort= 6\n",
+      "3, 2, 1, 0, 4| bubSort = 10| HeapSort= 4\n",
+      "3, 2, 1, 4, 0| bubSort = 10| HeapSort= 5\n",
+      "3, 2, 4, 0, 1| bubSort = 10| HeapSort= 4\n",
+      "3, 2, 4, 1, 0| bubSort = 10| HeapSort= 5\n",
+      "3, 4, 0, 1, 2| bubSort = 9| HeapSort= 4\n",
+      "3, 4, 0, 2, 1| bubSort = 10| HeapSort= 5\n",
+      "3, 4, 1, 0, 2| bubSort = 10| HeapSort= 3\n",
+      "3, 4, 1, 2, 0| bubSort = 10| HeapSort= 4\n",
+      "3, 4, 2, 0, 1| bubSort = 10| HeapSort= 5\n",
+      "3, 4, 2, 1, 0| bubSort = 10| HeapSort= 6\n",
+      "4, 0, 1, 2, 3| bubSort = 7| HeapSort= 5\n",
+      "4, 0, 1, 3, 2| bubSort = 9| HeapSort= 3\n",
+      "4, 0, 2, 1, 3| bubSort = 9| HeapSort= 7\n",
+      "4, 0, 2, 3, 1| bubSort = 10| HeapSort= 5\n",
+      "4, 0, 3, 1, 2| bubSort = 9| HeapSort= 6\n",
+      "4, 0, 3, 2, 1| bubSort = 10| HeapSort= 4\n",
+      "4, 1, 0, 2, 3| bubSort = 9| HeapSort= 6\n",
+      "4, 1, 0, 3, 2| bubSort = 9| HeapSort= 4\n",
+      "4, 1, 2, 0, 3| bubSort = 10| HeapSort= 5\n",
+      "4, 1, 2, 3, 0| bubSort = 10| HeapSort= 6\n",
+      "4, 1, 3, 0, 2| bubSort = 10| HeapSort= 4\n",
+      "4, 1, 3, 2, 0| bubSort = 10| HeapSort= 5\n",
+      "4, 2, 0, 1, 3| bubSort = 9| HeapSort= 4\n",
+      "4, 2, 0, 3, 1| bubSort = 10| HeapSort= 5\n",
+      "4, 2, 1, 0, 3| bubSort = 10| HeapSort= 3\n",
+      "4, 2, 1, 3, 0| bubSort = 10| HeapSort= 4\n",
+      "4, 2, 3, 0, 1| bubSort = 10| HeapSort= 3\n",
+      "4, 2, 3, 1, 0| bubSort = 10| HeapSort= 4\n",
+      "4, 3, 0, 1, 2| bubSort = 9| HeapSort= 3\n",
+      "4, 3, 0, 2, 1| bubSort = 10| HeapSort= 4\n",
+      "4, 3, 1, 0, 2| bubSort = 10| HeapSort= 2\n",
+      "4, 3, 1, 2, 0| bubSort = 10| HeapSort= 3\n",
+      "4, 3, 2, 0, 1| bubSort = 10| HeapSort= 4\n",
+      "4, 3, 2, 1, 0| bubSort = 10| HeapSort= 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# A module full of combinatorial functions.\n",
+    "import itertools\n",
+    "\n",
+    "# Length of example list.\n",
+    "n = 5\n",
+    "\n",
+    "# Loop through all permutations of the list of integers from 0 to n.\n",
+    "for perm in itertools.permutations(range(n)):\n",
+    "    L = list(perm)\n",
+    "    bubb_comp = bubble_sort(L)\n",
+    "    L = list(perm)\n",
+    "    heap_comp = heapsort(L)\n",
+    "    print(f'{str(perm)[1:-1]}| bubSort = {bubb_comp}| HeapSort= {heap_comp}')\n",
+    "    \n",
+    "    # how many comparsions each sort did for tons of 0-5 orders to sort them out"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df68cc51",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "# extra: pandas like excel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "2969f414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Like Excel for Python\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "c36e464a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Length of example list.\n",
+    "n = 9\n",
+    "\n",
+    "results = [[str(perm)[1:-1], bubble_sort(list(perm)), heapsort(list(perm))] for perm in itertools.permutations(range(n))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "74134476",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Peak at the results.\n",
+    "#results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "cf2c280e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(results, columns=['list', 'bubble', 'heap'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "755a1ed7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>list</th>\n",
+       "      <th>bubble</th>\n",
+       "      <th>heap</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0, 1, 2, 3, 4, 5, 6, 7, 8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0, 1, 2, 3, 4, 5, 6, 8, 7</td>\n",
+       "      <td>15</td>\n",
+       "      <td>23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0, 1, 2, 3, 4, 5, 7, 6, 8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0, 1, 2, 3, 4, 5, 7, 8, 6</td>\n",
+       "      <td>21</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0, 1, 2, 3, 4, 5, 8, 6, 7</td>\n",
+       "      <td>15</td>\n",
+       "      <td>22</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        list  bubble  heap\n",
+       "0  0, 1, 2, 3, 4, 5, 6, 7, 8       8    25\n",
+       "1  0, 1, 2, 3, 4, 5, 6, 8, 7      15    23\n",
+       "2  0, 1, 2, 3, 4, 5, 7, 6, 8      15    24\n",
+       "3  0, 1, 2, 3, 4, 5, 7, 8, 6      21    24\n",
+       "4  0, 1, 2, 3, 4, 5, 8, 6, 7      15    22"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "635da64f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bubble</th>\n",
+       "      <th>heap</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>362880.000000</td>\n",
+       "      <td>362880.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>33.506842</td>\n",
+       "      <td>18.522917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.077026</td>\n",
+       "      <td>2.399822</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>8.000000</td>\n",
+       "      <td>9.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>33.000000</td>\n",
+       "      <td>17.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>35.000000</td>\n",
+       "      <td>19.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>36.000000</td>\n",
+       "      <td>27.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              bubble           heap\n",
+       "count  362880.000000  362880.000000\n",
+       "mean       33.506842      18.522917\n",
+       "std         3.077026       2.399822\n",
+       "min         8.000000       9.000000\n",
+       "25%        33.000000      17.000000\n",
+       "50%        35.000000      19.000000\n",
+       "75%        36.000000      20.000000\n",
+       "max        36.000000      27.000000"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e69d020a",
+   "id": "d3844bd0",
    "metadata": {},
    "outputs": [],
    "source": []
