--- a/heap-sort.ipynb
+++ b/heap-sort.ipynb
@@ -417,7 +417,23 @@
    "source": [
     "<br>\n",
     "\n",
-    "## Heap Sort Complexity "
+    "## Heap Sort Algorithm Complexity "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63b2ae3f",
+   "metadata": {},
+   "source": [
+    "Before we can talk about the complexity of the heap sort algorithm, we need to know what Big O notation means in terms of computer science. Big O notation is one of the most fundamental tools for computer scientists to analyze the cost of an algorithm. [[11]](https://www.freecodecamp.org/news/big-o-notation-why-it-matters-and-why-it-doesnt-1674cfa8a23c/)\n",
+    "\n",
+    "Big O notation is used to describe the complexity of an algorithm when measuring its efficiency, which in this case means how well the algorithm scales with the size of the dataset. \n",
+    "\n",
+    "Big O is represented with the following syntax: O(n). The value we're concerned with is between the parentheses and will in most cases include the variable n, which denotes the size of the algorithm's input. the algorithm will be a function, and n will typically refers to the size of a collection taken by the function as its input. The value between the parentheses expresses that function's complexity in terms of n.\n",
+    "\n",
+    "Complexity is measured in two dimensions: time (how long a function takes to complete), and space (how much memory a function consumes while executing). \n",
+    "\n",
+    "The 2 diagrams belows show some of Big O notations and their performances:\n"
    ]
   },
   {
@@ -453,7 +469,9 @@
     "\n",
     "max and min heap https://www.geeksforgeeks.org/difference-between-min-heap-and-max-heap/ [9] <br>\n",
     "\n",
-    "binary heap geeks https://www.geeksforgeeks.org/binary-heap/ [10] <br>"
+    "binary heap geeks https://www.geeksforgeeks.org/binary-heap/ [10] <br>\n",
+    "\n",
+    "big o notation https://www.freecodecamp.org/news/big-o-notation-why-it-matters-and-why-it-doesnt-1674cfa8a23c/ [11] <br>\n"
    ]
   },
   {
