--- a/heap-sort.ipynb
+++ b/heap-sort.ipynb
@@ -483,8 +483,25 @@
    "id": "92e11232",
    "metadata": {},
    "source": [
-    "## Why use graph theory with heapsort"
+    "## Explanation of how graph theory is used in Heap Sort"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "be039cf1",
+   "metadata": {},
+   "source": [
+    "Heap sort algorithm and algorithms in general aren't easy to explain and demonstrate how they work. In mathematics and computer science, an algorithm is a finite sequence of well-defined instructions, typically used to solve a class of specific problems or to perform a computation. So when you're trying to demonstrate its workings graph theory provides a helpful tool to quantify, simplify, and visualise the many moving parts of these type of dynamic systems. [[14]](https://towardsdatascience.com/what-is-graph-theory-and-why-should-you-care-28d6a715a5c2#:~:text=Graph%20Theory%20is%20ultimately%20the,moving%20parts%20of%20dynamic%20systems.)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "273e2d5b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -526,8 +543,18 @@
     "big o complexity https://guides.codepath.com/compsci/Big-O-Complexity-Analysis#:~:text=Big%20O%20notation%20is%20used,the%20size%20of%20the%20dataset. [12] <br>\n",
     "\n",
     "heapsort o(n log n) https://www.quora.com/How-does-Heapsort-take-O-nlogn-time [13] <br>\n",
+    "\n",
+    "what is graph theory and why we should care https://towardsdatascience.com/what-is-graph-theory-and-why-should-you-care-28d6a715a5c2#:~:text=Graph%20Theory%20is%20ultimately%20the,moving%20parts%20of%20dynamic%20systems. [14] <br>\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "568bf783",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
